@@ -69,7 +69,7 @@ contains
     !*FD initialise test cases B and C
     use glide_types
     use physcon
-    use paramets
+    use glimmer_paramets
     use glimmer_log
     implicit none
     
@@ -140,7 +140,7 @@ contains
   subroutine verifBC_update(model, veri, time, exact_h, mb)
     !*FD calculate exact ice thickness and mass balance
     use glide_types
-    use paramets, only: scyr, len0
+    use glimmer_paramets, only: scyr, len0
     implicit none
     type(glide_global_type)   :: model !*FD model instance
     type(verifBC_type)        :: veri  !*FD structure holding test setup
